[package]
name = "light-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "stm32f411ce",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.3.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"

usb-device = "0.2"
usbd-serial = "0.1.1"

[profile.release]
debug = true
lto = true
